--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
         <div class="area4--content">
             <div class="box"></div>
             <div class="conteudo--area4">
-                <h1>Four Drinks, A Milion <br> Reasons</h1>
-                <span><q>Just love yourself and you're set</q>- Lady Gaga</span>
+                <h1>Kidness Start <br>
+                    With a Cup</h1>
                 <p>Lady Gaga and Starbucks share a mission: Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam neque nostrum quasi harum voluptates ad nemo doloribus sunt voluptate aliquam, nulla ut magnam, officia, id iusto provident. Aspernatur, porro odio.</p>
                 <div class="btn">
                     <a href="">Learn more</a>
@@ -117,5 +117,9 @@
   
         </div>
     </section>
+    <section class="area5"></section>
+    <footer>
+        <p>Criado para testar os aprendizados em flex grid e flex box</p>
+    </footer>
 </body>
 </html>
